# linaii

./: CMakeLists.txt  LLVMBuild.txt  README.md  lin-profile.cpp
include/profile_h/: ArgPack.h  AssignBasicBlockIDPass.h  AssignLoadStoreIDPass.h  BaseDatapath.h  ContextManager.h  DDDG.h  DDDGBuilder.h  DynamicDatapath.h  ExtractLoopInfoPass.h  FunctionNameMapperPass.h  HardwareProfile.h  InstrumentForDDDGPass.h  LoopNumberPass.h  MemoryModel.h  Multipath.h  NodeLatency.h  Passes.h  SharedDynamicTrace.h  SharedMemoryTraceMap.h  SlotTracker.h  TraceFunctions.h  auxiliary.h  boostincls.h  colors.h  lin-profile.h  opcodes.h
lib/: CMakeLists.txt  LLVMBuild.txt
lib/Aux/: CMakeLists.txt  LLVMBuild.txt  auxiliary.cpp  globalCfgParams.cpp
lib/Build_DDDG/: BaseDatapath.cpp  CMakeLists.txt  ColorWriter.cpp  ContextManager.cpp  DDDG.cpp  DDDGBuilder.cpp  DynamicDatapath.cpp  HardwareProfile.cpp  HardwareProfileParams.cpp  MemoryModel.cpp  Multipath.cpp  NodeLatency.cpp  SharedDynamicTrace.cpp  SlotTracker.cpp  TraceFunctions.cpp  opcodes.cpp
lib/Profile/: AssignBasicBlockID.cpp  AssignLoadStoreID.cpp  CMakeLists.txt  ExtractLoopInfoPass.cpp  FunctionNameMapperPass.cpp  InstrumentForDDDGPass.cpp  LoopNumberPass.cpp
misc/: compiler.2_updlat.sh  compiler.sh
misc/largedse/: run.py
misc/largedse/utils/: Makefile.linsched
misc/linad/: Makefile  linad.cpp  run.py
misc/smalldse/: runall.sh  runallvivado.sh  vai.py  vivai.py
misc/smalldse/processedResults/: full.ods  unc0_arr0_pip0_unr00.ods  unc0_arr0_pip0_unr01.ods  unc0_arr0_pip0_unr10.ods  unc0_arr0_pip0_unr11.ods  unc0_arr0_pip1_unr00.ods  unc0_arr0_pip1_unr10.ods  unc0_arr1_pip0_unr00.ods  unc0_arr1_pip0_unr01.ods  unc0_arr1_pip0_unr10.ods  unc0_arr1_pip0_unr11.ods  unc0_arr1_pip1_unr00.ods  unc0_arr1_pip1_unr10.ods  unc1_arr0_pip0_unr00.ods  unc1_arr0_pip0_unr01.ods  unc1_arr0_pip0_unr10.ods  unc1_arr0_pip0_unr11.ods  unc1_arr0_pip1_unr00.ods  unc1_arr0_pip1_unr10.ods  unc1_arr1_pip0_unr00.ods  unc1_arr1_pip0_unr01.ods  (+4 more)
misc/smalldseddr1/: .gitignore  _trender.db  runall  scripter  trender  trenderRotator
(+163 files in other folders)
